Add Help to Vendas

--- a/SisMaper/Help/HTML/RequisitosdoSistema.html
+++ b/SisMaper/Help/HTML/RequisitosdoSistema.html
@@ -174,7 +174,7 @@
                         <li>Sobre</li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Usuario.html" title="Usu&aacute;rio" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="InformacoesdeContato.html" title="Informa&ccedil;&otilde;es de Contato" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Configuracoes.html" title="Configura&ccedil;&otilde;es" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="InformacoesdeContato.html" title="Informa&ccedil;&otilde;es de Contato" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,12 +185,13 @@
 
             <div class="main-content">
                 
-<p class="rvps2"><span class="rvts6">Para a utilização do Software SisMaper é necessário um sistema contendo os seguintes requisitos:</span></p>
+<p class="rvps5"><span class="rvts18">Para a utilização do Software SisMaper é necessário um sistema contendo os seguintes requisitos:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: disc;">
- <li style="margin-left: 0px; text-indent: 0px" class="rvps10"><span class="rvts6">Windows 11/10/8.1/8/7</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps10"><span class="rvts6">512MB de RAM</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps10"><span class="rvts6">200MB de espaço livre em disco</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps10"><span class="rvts6">Resolução de 1024x768 ou maior</span><span class="rvts6"></span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Windows 11/10/8.1/8/7</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">512MB de RAM</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">400MB de espaço livre em disco</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Resolução de 1024x768 ou maior</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Conexão com a Internet</span><span class="rvts6"></span></li>
 </ul>
 <p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Generate Kindle eBooks with ease</a></p>
 
