--- a/SisMaper/Help/HTML/Usuarios.html
+++ b/SisMaper/Help/HTML/Usuarios.html
@@ -174,7 +174,7 @@
                         <li><a href="Cadastros.html">Cadastros</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ClientesValidacaoDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Configuracoes.html" title="Configura&ccedil;&otilde;es" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ClientesValidacaoDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Permissoes.html" title="Permiss&otilde;es" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,33 +185,33 @@
 
             <div class="main-content">
                 
-<p class="rvps5"><span class="rvts17">O menu cadastro de usuários permite visualizar todos os usuários registrados. Além de permitir o usuário criar ou editar um usuário, e também aplicar filtros. Esse menu só pode ser acessado como um usuário com permissões de administrador.</span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
+<p class="rvps5"><span class="rvts18">O menu cadastro de usuários permite visualizar todos os usuários registrados. Além de permitir o usuário criar ou editar um usuário, e também aplicar filtros. Esse menu só pode ser acessado como um usuário com permissões de administrador.</span></p>
+<p class="rvps5"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><a name="AdicionarEditarUsuarios"></a><span class="rvts18">Adicionar ou Editar Usuários.</span></li>
+ <li class="rvps5"><a name="AdicionarEditarUsuarios"></a><span class="rvts17">Adicionar ou Editar Usuários.</span></li>
 </ul>
-<p class="rvps5"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts17">Na tela de listagem de produtos, é possível adicionar, editar ou excluir produtos.</span></p>
-<p class="rvps5"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><img width="163" height="97" alt="" style="padding : 1px;" src="lib/NewItem33.png"></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
-  <li class="rvps5"><span class="rvts17">Adicionar</span></li>
- </ul>
-</ul>
-<p class="rvps9"><span class="rvts17">Para adicionar um usuário, basta clicar no botão </span><span class="rvts21">Novo</span><span class="rvts17">.</span></p>
+<p class="rvps5"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Na tela de listagem de produtos, é possível adicionar, editar ou excluir produtos.</span></p>
+<p class="rvps5"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><img width="163" height="97" alt="" style="padding : 1px;" src="lib/NewItem33.png"></p>
+<p class="rvps5"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
  <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
-  <li style="margin-left: 0px; text-indent: 0px" class="rvps9"><span class="rvts17">Editar</span></li>
+  <li class="rvps5"><span class="rvts18">Adicionar</span></li>
  </ul>
 </ul>
-<p class="rvps9"><span class="rvts17">Para editar um usuário, é necessário selecionar um usuário na lista e clicar no botão </span><span class="rvts21">Editar</span><span class="rvts17">. Um usuário também pode ser editado utilizando o clique duplo na lista.</span></p>
-<p class="rvps9"><span class="rvts17"><br/></span></p>
+<p class="rvps18"><span class="rvts18">Para adicionar um usuário, basta clicar no botão </span><span class="rvts22">Novo</span><span class="rvts18">.</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li style="margin-left: 0px; text-indent: 0px" class="rvps9"><a name="FiltroUsuarios"></a><span class="rvts18">Filtro</span></li>
+ <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
+  <li style="margin-left: 0px; text-indent: 0px" class="rvps18"><span class="rvts18">Editar</span></li>
+ </ul>
 </ul>
-<p class="rvps8"><img width="191" height="77" alt="" style="padding : 1px;" src="lib/NewItem34.png"></p>
-<p class="rvps9"><span class="rvts17"><br/></span></p>
-<p class="rvps8"><span class="rvts17">O filtro de usuários permite que o usuário liste apenas os usuários cujo nome contenha o que foi digitado na caixa de texto.</span><span class="rvts6"></span></p>
+<p class="rvps18"><span class="rvts18">Para editar um usuário, é necessário selecionar um usuário na lista e clicar no botão </span><span class="rvts22">Editar</span><span class="rvts18">. Um usuário também pode ser editado utilizando o clique duplo na lista.</span></p>
+<p class="rvps18"><span class="rvts18"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps18"><a name="FiltroUsuarios"></a><span class="rvts17">Filtro</span></li>
+</ul>
+<p class="rvps17"><img width="191" height="77" alt="" style="padding : 1px;" src="lib/NewItem34.png"></p>
+<p class="rvps18"><span class="rvts18"><br/></span></p>
+<p class="rvps17"><span class="rvts18">O filtro de usuários permite que o usuário liste apenas os usuários cujo nome contenha o que foi digitado na caixa de texto.</span><span class="rvts6"></span></p>
 <p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Free iPhone documentation generator</a></p>
 
             </div>
