--- a/SisMaper/Help/HTML/Vendas.html
+++ b/SisMaper/Help/HTML/Vendas.html
@@ -185,23 +185,44 @@
 
             <div class="main-content">
                 
-<p class="rvps5"><span class="rvts17">O menu vendas permite visualizar todas as vendas realizadas, criar editar ou excluir uma venda, e também aplicar filtros.</span></p>
-<p class="rvps5"><a class="rvts19" href="Vendas.html#NovaVenda">Vendas</a></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><a name="NovaVenda"></a><span class="rvts18">Nova Venda</span></li>
-</ul>
+<p class="rvps6"><img width="504" height="295" alt="" style="padding : 1px;" src="lib/Tela%20de%20Vendas.png"></p>
+<p class="rvps5"><span class="rvts18">O menu vendas permite visualizar todas as vendas realizadas, criar editar ou excluir um pedido, e também aplicar filtros. Para este acesso é necessário que o usuário possua permissão de vendas.</span></p>
 <p class="rvps5"><span class="rvts18"><br/></span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><a name="EditarVenda"></a><span class="rvts18">Editar Venda</span></li>
+ <li class="rvps5"><a name="NovoPedido"></a><span class="rvts17">Novo Pedido</span></li>
 </ul>
+<p class="rvps5"><span class="rvts6">Para criar um novo pedido, na tela de vendas clique em </span><img width="35" height="36" alt="" style="padding : 1px;" src="lib/Botao%20Novo.png"><span class="rvts6">, em seguida, uma nova janela será aberta:</span></p>
 <p class="rvps5"><span class="rvts18"><br/></span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
+<p class="rvps8"><img width="461" height="340" alt="" style="padding : 1px;" src="lib/Tela%20Novo%20Pedido.png"></p>
+<p class="rvps5"><span class="rvts6"><br/></span></p>
+<p class="rvps5"><span class="rvts6">Ao criar um novo pedido, a data do pedido será do dia atual, porém pode ser alterada, não podendo esta, ser um dia futuro. Uma natureza de operação deve ser escolhida, a qual já deve estar pré cadastrada por um administrador em </span><a class="rvts11" href="Configuracoes.html">Configurações</a><span class="rvts6">.</span></p>
+<p class="rvps5"><span class="rvts6">Caso deseje identificar um cliente é possível buscar através do campo 'Buscar Cliente'. Para visualizar e editar informações do cliente, pressione </span><img width="25" height="25" alt="" style="padding : 1px;" src="lib/Botao%20Editar%20Cliente.png"><span class="rvts6">, uma nova janela será aberta para a edição do cliente. Caso o cliente ainda não possua cadastro no sistema, pressione </span><img width="28" height="28" alt="" style="padding : 1px;" src="lib/Botao%20Novo%20Cliente.png"><span class="rvts6"> para cadastrar um novo cliente e siga as instruções em </span><a class="rvts11" href="Clientes.html">Cadastro de Clientes</a><span class="rvts6">.</span></p>
+<p class="rvps5"><span class="rvts6">Em seguida busque produtos, insira a quantidade e adicione aos itens do pedido. Veja o passo à passo em </span><a class="rvts11" href="ComoInserireEditarItens.html">Como Inserir e Editar Itens</a><span class="rvts6">.</span></p>
+<p class="rvps5"><span class="rvts6">Ao clicar em </span><img width="57" height="22" alt="" style="padding : 1px;" src="lib/Botao%20Cancelar.png"><span class="rvts6">, o pedido fechado e será descartado, para salvar pressione </span><img width="44" height="24" alt="" style="padding : 1px;" src="lib/Botao%20Salvar.png"><span class="rvts6">.</span></p>
+<p class="rvps5"><span class="rvts6">Após todos os itens serem adicionados, veja </span><a class="rvts11" href="ComoFaturarumPedido.html">Como Faturar um Pedido</a><span class="rvts6"> e </span><a class="rvts11" href="ComoEmitirumaNotaFiscal.html">Como Emitir uma Nota Fiscal</a><span class="rvts6">.</span></p>
+<p class="rvps7"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><a name="ExcluirVenda"></a><span class="rvts18">Excluir Venda</span></li>
+ <li class="rvps5"><a name="EditarPedido"></a><span class="rvts17">Editar Pe</span><span class="rvts17">dido</span></li>
 </ul>
-<p class="rvps5"><span class="rvts18"></span><span class="rvts6"></span></p>
+<p class="rvps5"><span class="rvts6">Para editar um pedido, selecione o pedido desejado na lista, clique em </span><img width="37" height="37" alt="" style="padding : 1px;" src="lib/Botao%20Editar.png"><span class="rvts6">, em seguida, uma nova janela será aberta:</span></p>
+<p class="rvps5"><img width="467" height="344" alt="" style="padding : 1px;" src="lib/Tela%20Editar%20Pedido.png"></p>
+<p class="rvps5"><span class="rvts6"><br/></span></p>
+<p class="rvps5"><span class="rvts6">Com o pedido aberto é possível realizar as mesmas ações vistas acima, em </span><a class="rvts11" href="Vendas.html#NovoPedido">Novo Pedido</a><span class="rvts6">.</span></p>
+<p class="rvps5"><span class="rvts18"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li class="rvps5"><span class="rvts17">Excluir Pedido</span></li>
+</ul>
+<p class="rvps5"><span class="rvts6">Para excluir um pedido, selecione o pedido desejado na lista, clique em </span><img width="35" height="36" alt="" style="padding : 1px;" src="lib/Botao%20Excluir.png"><span class="rvts6">. Uma mensagem de confirmação será exibida.</span></p>
+<p class="rvps5"><span class="rvts6">Pedidos encerrados e/ou faturados não podem ser excluídos. Pedidos com notas fiscais também não podem ser excluídos, apenas cancelados.</span></p>
+<p class="rvps5"><span class="rvts6"><br/></span></p>
+<p class="rvps5"><span class="rvts17">Veja também:</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li class="rvps5"><a class="rvts19" href="ComoInserireEditarItens.html">Como Inserir e Editar Itens</a></li>
+ <li class="rvps5"><a class="rvts19" href="ComoFaturarumPedido.html">Como Faturar um Pedido</a></li>
+ <li class="rvps5"><a class="rvts19" href="ComoEmitirumaNotaFiscal.html">Como Emitir uma Nota Fiscal</a></li>
+ <li class="rvps5"><a class="rvts19" href="BuscadeProduto.html">Busca de Produto</a></li>
+ <li class="rvps5"><a class="rvts19" href="FiltrodeVendas.html">Filtro de Vendas</a><span class="rvts6"></span></li>
+</ul>
 <p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com">Free CHM Help documentation generator</a></p>
 
             </div>
