--- a/SisMaper/Help/HTML/ComoEmitirumaNotaFiscal.html
+++ b/SisMaper/Help/HTML/ComoEmitirumaNotaFiscal.html
@@ -174,7 +174,7 @@
                         <li><a href="Vendas.html">Vendas</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ComoInserireEditarItens.html" title="Como Inserir e Editar Itens" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="FiltrodeVendas.html" title="Filtro de Vendas" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ComoFaturarumPedido.html" title="Como Faturar um Pedido" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="BuscadeProduto.html" title="Busca de Produto" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,8 +185,30 @@
 
             <div class="main-content">
                 
-<p class="rvps2"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts17">Para emitir uma Nota Fiscal é necessário ter um Pedido Encerrado. Se o Pedido ainda não foi criado, veja </span><a class="rvts19" href="Vendas.html#NovaVenda">como realizar uma nova venda</a></p>
-<p class="rvps2"><span class="rvts6"></span><span class="rvts6"></span></p>
+<p class="rvps14"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Para emitir uma Nota Fiscal é necessário ter um Pedido Encerrado e Faturado. Se o Pedido ainda não foi criado, veja </span><a class="rvts21" href="Vendas.html#NovaVenda">Como realizar uma Nova Venda</a><span class="rvts18">. Com o Pedido Aberto:</span></p>
+<p class="rvps3"><img width="432" height="319" alt="" style="padding : 1px;" src="lib/Tela%20Pedido%20para%20Emissao.png"></p>
+<p class="rvps7"><span class="rvts18"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li class="rvps9"><span class="rvts18">Clique em </span><img width="129" height="29" alt="" style="padding : 1px;" src="lib/Botao%20Emitir%20Nota%20Fiscal.png"><span class="rvts18">. Duas opções serão apresentadas </span><img width="172" height="48" alt="" style="padding : 1px;" src="lib/Opcoes%20Emitir%20Nota%20Fiscal.png"><span class="rvts18">:</span></li>
+ <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
+  <li class="rvps9"><span class="rvts20">Nota Fiscal Eletrônica</span><span class="rvts6">: Para a emissão da nota fiscal eletrônica é necessário informar um cliente válido, com CNPJ ou CPF, e todas as informações solicitadas em </span><a class="rvts11" href="Clientes.html">Cadastro de Clientes</a><span class="rvts6">.</span></li>
+  <li class="rvps9"><span class="rvts20">Nota Fiscal do Consumidor</span><span class="rvts6">: Para a emissão da nota fiscal do consumidor é opcional a identificação do consumidor.</span></li>
+ </ul>
+</ul>
+<p class="rvps10"><span class="rvts18">Em casos de erros nas informações de cliente ou produto uma mensagem de erro retornará as verificações feitas ao tentar emitir a nota fiscal, por exemplo:</span></p>
+<p class="rvps15"><img width="521" height="107" alt="" style="padding : 1px;" src="lib/Tela%20Erro%20ao%20Validar%20Nota%20Fiscal.png"></p>
+<p class="rvps10"><span class="rvts18">Ao selecionar uma das opções a nota fiscal será enviada para emissão. Aguarde o retorno. Quando a nota for emitida, uma nova guia estará disponível:</span></p>
+<p class="rvps6"><img width="493" height="368" alt="" style="padding : 1px;" src="lib/Tela%20Pedido%20Nota%20Fiscal.png"></p>
+<p class="rvps10"><span class="rvts18">Através desta tela é possivel:</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li style="text-indent: 0px" class="rvps10"><span class="rvts18">Visualizar as Notas Fiscais emitidas, o seu status (aprovada, rejeitada, cancelada), a data de emissão, o número de série e número da NF-e ou NFC-e</span></li>
+ <li style="text-indent: 0px" class="rvps10"><span class="rvts18">Imprimir o Documento Auxiliar da Nota Fiscal Eletrônica(DANFE)</span></li>
+ <li style="text-indent: 0px" class="rvps10"><span class="rvts18">Atualizar a Situação da Nota Fiscal</span></li>
+</ul>
+<p class="rvps10"><span class="rvts18"><br/></span></p>
+<p class="rvps10"><span class="rvts18">Caso a nota fiscal apresente situação 'Processamento' ou 'Contingência' atualize a mesma até que mude sua situação.</span></p>
+<p class="rvps10"><span class="rvts18">Notas Fiscais não Aprovadas, podem ser novamente emitidas, até que exista uma nota fiscal com situação Aprovada e não seja mais possível emitir.</span></p>
+<p class="rvps2"><span class="rvts18"></span><span class="rvts6"></span></p>
 <p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">iPhone web sites made easy</a></p>
 
             </div>
