--- a/SisMaper/Help/HTML/ComoInserireEditarItens.html
+++ b/SisMaper/Help/HTML/ComoInserireEditarItens.html
@@ -174,7 +174,7 @@
                         <li><a href="Vendas.html">Vendas</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="ComoEmitirumaNotaFiscal.html" title="Como Emitir uma Nota Fiscal" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Vendas.html" title="Vendas" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="ComoFaturarumPedido.html" title="Como Faturar um Pedido" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,19 +185,27 @@
 
             <div class="main-content">
                 
-<p class="rvps5"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts17">Para inserir itens é necessário ter um pedido criado. Com o pedido criado e aberto na guia Itens:</span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
+<p class="rvps5"><span class="rvts17">Inserindo Itens</span></p>
+<p class="rvps7"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Para inserir itens é necessário ter um pedido criado. Com o pedido criado e aberto na guia Itens:</span></p>
+<p class="rvps6"><img width="639" height="318" alt="" style="padding : 1px;" src="lib/Guia%20Itens.png"></p>
+<p class="rvps10"><span class="rvts18">Para adicionar um item:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><span class="rvts17">Digite o nome do produto, código de barras ou código interno na barra de busca. Também é possível buscar o produto em uma lista, ao clicar no ícone </span><img width="26" height="25" alt="" style="padding : 1px;" src="lib/NewItem4.png"><span class="rvts17"> uma nova janela será aberta, contendo filtros e informações mais detalhadas.</span></li>
+ <li class="rvps9"><span class="rvts6">Digite o nome do produto, código de barras ou código interno na barra de busca. Também é possível buscar o produto em uma lista, ao clicar no ícone </span><img width="26" height="25" alt="" style="padding : 1px;" src="lib/Botao%20Buscar%20Produto.png"><span class="rvts6"> uma nova janela de </span><a class="rvts11" href="BuscadeProduto.html">Busca de Produto</a><span class="rvts6"> será aberta, contendo filtros e informações mais detalhadas.</span></li>
+ <li class="rvps9"><span class="rvts6">Insira a quantidade do item. Caso nenhum valor seja inserido, o valor padrão será 1. Ao escolher um produto de venda não fracionada, não será permitido números com casas decimais.</span></li>
+ <li class="rvps9"><span class="rvts6">Pressione [Enter] nos campos 'Buscar Produto' ou 'Quantidade' ou pressione </span><img width="54" height="21" alt="" style="padding : 1px;" src="lib/Botao%20Adicionar.png"><span class="rvts6"> para adicionar à lista de itens.</span></li>
+ <li class="rvps9"><span class="rvts6">Caso o produto possua um ou mais lotes, uma nova janela solicitará a escolha do lote do produto vendido. Selecione o lote e clique em OK.</span></li>
 </ul>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><span class="rvts17">Insira a quantidade do item. Caso nenhum valor seja inserido, o valor padrão será 1. Ao escolher um produto de venda não fracionada, não será permitido números com casas decimais.</span></li>
-</ul>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps5"><span class="rvts17">Caso o produto possua um ou mais lotes, uma nova janela solicitará a escolha do lote do produto vendido. Selecione o lote e clique em OK.</span><span class="rvts6"></span></li>
-</ul>
+<p class="rvps12"><img width="330" height="182" alt="" style="padding : 1px;" src="lib/Tela%20Escolher%20Lote.png"></p>
+<p class="rvps8"><span class="rvts17"><br/></span></p>
+<p class="rvps8"><span class="rvts17">Editando</span><a name="EditarItem"></a><span class="rvts17"> Itens</span></p>
+<p class="rvps10"><span class="rvts18">Após um item ser adicionado, o mesmo será apresentado abaixo:</span></p>
+<p class="rvps9"><img width="600" height="298" alt="" style="padding : 1px;" src="lib/Guia%20Editando%20Itens.png"></p>
+<p class="rvps11"><span class="rvts18">Para editar um item, pressione </span><img width="22" height="24" alt="" style="padding : 1px;" src="lib/Botao%20Editar%20Item.png"><span class="rvts18"> no item desejado. Uma nova janela de edição se abrirá:</span></p>
+<p class="rvps9"><img width="380" height="213" alt="" style="padding : 1px;" src="lib/Tela%20Editar%20Item.png"></p>
+<p class="rvps9"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span></p>
+<p class="rvps9"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Nesta janela, é possível alterar o produto através do </span><span class="rvts18"> ao lado da descrição do produto, o qual abrirá a tela de Busca de Produto. A quantidade, o valor unitário a ser vendido, o valor total ou o desconto também podem ser modificados. Ao alterar o valor do desconto, o valor unitário e total será ajustado automaticamente, assim como se alterado os valores, os demais campos serão ajustados. Caso algum valor não seja aceito, como por exemplo quantidade inválida, uma mensagem de erro será apresentada. Caso o produto possua lote, o lote pode ser escolhido. Ao clicar em </span></p>
+<p class="rvps9"><span class="rvts17">Removendo Itens</span></p>
+<p class="rvps11"><span class="rvts18">Para remover um item pressione </span><img width="23" height="24" alt="" style="padding : 1px;" src="lib/Botao%20Remover%20Item.png"><span class="rvts18"> no item desejado.</span><span class="rvts6"></span></p>
 <p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">iPhone web sites made easy</a></p>
 
             </div>
