Add Help in Configuracoes

--- a/SisMaper/Help/HTML/Configuracoes.html
+++ b/SisMaper/Help/HTML/Configuracoes.html
@@ -185,7 +185,20 @@
 
             <div class="main-content">
                 
-<p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/create-help-files-for-the-qt-help-framework">Create help files for the Qt Help Framework</a></p>
+<p class="rvps9"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Através da tela de configurações é possível alterar informações da empresa, como Razão Social, CNPJ e as chaves necessárias para a emissão da nota fiscal, disponibilizadas pela API WebMania.</span></p>
+<p class="rvps3"><img width="448" height="285" alt="" style="padding : 1px;" src="lib/Tela%20Configuracoes.png"></p>
+<p class="rvps9"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Através dos botões superiores é possível alterar outras configurações:</span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li class="rvps9"><span class="rvts17">Alteração de natureza</span><span class="rvts18">: Uma nova janela será aberta a qual é possível adicionar, editar ou remover as naturezas. Estas, devem estar previamente cadastradas na API WebMania, para que funcionem corretamente ao emitir uma nota fiscal.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps3"><img width="234" height="234" alt="" style="padding : 1px;" src="lib/Tela%20Naturezas.png"></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+ <li class="rvps9"><span class="rvts17">Importação de chave PEM</span><span class="rvts18">: O sistema possui a criptografia das informações utilizando uma chave pública. Todos os dispositivos devem utilizar a mesma chave para que consigam utilizar as funcionalidades da API, como forma de proteger as informações no banco de dados.</span></li>
+ <li class="rvps9"><span class="rvts17">Atualizar NCMs</span><span class="rvts18">: Para a atualização de NCM deve ser inserido um arquivo .tsv, contendo a tabela atual dos NCMs, disponibilizado pela WebMania em: </span><a class="rvts24" href="https://ajuda.webmaniabr.com/hc/pt-br/articles/360023138211-Desvendando-a-NCM-" target="_blank">https://ajuda.webmaniabr.com/hc/pt-br/articles/360023138211-Desvendando-a-NCM-</a><span class="rvts18">.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts18"></span><span class="rvts6"></span></p>
+<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/create-help-files-for-the-qt-help-framework">Create help files for the Qt Help Framework</a></p>
 
             </div>
             
