--- a/SisMaper/Help/HTML/context/2.html
+++ b/SisMaper/Help/HTML/context/2.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "What's new"</title>
-    <link rel="canonical" href="../Whatsnew.html" />
+    <title>Redirecting to "Funcionalidades Futuras"</title>
+    <link rel="canonical" href="../FuncionalidadesFuturas.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Whatsnew.html" />
+    <meta http-equiv="refresh" content="0; url=../FuncionalidadesFuturas.html" />
 </head>
 
 </html>
