--- a/SisMaper/Help/HTML/context/9.html
+++ b/SisMaper/Help/HTML/context/9.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "New topic"</title>
-    <link rel="canonical" href="../Newtopic.html" />
+    <title>Redirecting to "Instala&ccedil;&atilde;o"</title>
+    <link rel="canonical" href="../Instalacao.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Newtopic.html" />
+    <meta http-equiv="refresh" content="0; url=../Instalacao.html" />
 </head>
 
 </html>
