--- a/SisMaper/Help/HTML/ComoFaturarumPedido.html
+++ b/SisMaper/Help/HTML/ComoFaturarumPedido.html
@@ -185,26 +185,28 @@
 
             <div class="main-content">
                 
-<p class="rvps7"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Para faturar um pedido é necessário ter um ou mais itens incluídos. Com o pedido aberto:</span></p>
-<p class="rvps7"><img width="467" height="344" alt="" style="padding : 1px;" src="lib/Tela%20Editar%20Pedido.png"></p>
-<p class="rvps7"><span class="rvts18"><br/></span></p>
-<p class="rvps7"><span class="rvts18"><br/></span></p>
+<p class="rvps9"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Para faturar um pedido é necessário ter um ou mais itens incluídos. Com o pedido aberto:</span></p>
+<p class="rvps9"><img width="467" height="344" alt="" style="padding : 1px;" src="lib/Tela%20Editar%20Pedido.png"></p>
+<p class="rvps9"><span class="rvts18"><br/></span></p>
+<p class="rvps9"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps7"><span class="rvts18">Clique em </span><img width="77" height="31" alt="" style="padding : 1px;" src="lib/Botao%20Faturar.png"><span class="rvts18">, uma nova janela será aberta:</span></li>
+ <li class="rvps9"><span class="rvts18">Clique em </span><img width="77" height="31" alt="" style="padding : 1px;" src="lib/Botao%20Faturar.png"><span class="rvts18">, uma nova janela será aberta:</span></li>
 </ul>
-<p class="rvps10"><img width="229" height="160" alt="" style="padding : 1px;" src="lib/Tela%20Selecionar%20Tipo%20de%20Pagamento.png"></p>
+<p class="rvps12"><img width="229" height="160" alt="" style="padding : 1px;" src="lib/Tela%20Selecionar%20Tipo%20de%20Pagamento.png"></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
- <li class="rvps9"><span class="rvts18">Selecione a opção desejada:</span></li>
+ <li class="rvps11"><span class="rvts18">Selecione a opção desejada:</span></li>
  <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
-  <li class="rvps9"><span class="rvts6">Para pagamentos </span><span class="rvts20">À Vista</span><span class="rvts6">: o sistema gerará a fatura automaticamente e receberá a mesma em dinheiro;</span></li>
-  <li class="rvps9"><span class="rvts20">Nova Fatura</span><span class="rvts6">: é necessário informar previamente um cliente. Uma nova fatura será criada, e aberta, conforme visto em </span><a class="rvts11" href="Recebimento.html">Recebimento</a><span class="rvts6">;</span></li>
-  <li class="rvps9"><span class="rvts20">Fatura Existente</span><span class="rvts6">: uma lista de faturas existentes, abertas, e do cliente do pedido. Selecione a fatura a qual deseja vincular e pressione </span><img width="64" height="22" alt="" style="padding : 1px;" src="lib/Botao%20Selecionar.png"><span class="rvts6">. O pedido será vinculado à fatura escolhida e aberta conforme </span><a class="rvts11" href="Recebimento.html">Recebimento</a><span class="rvts6">.</span></li>
+  <li class="rvps10"><span class="rvts6">Para pagamentos </span><span class="rvts21">À Vista</span><span class="rvts6">: o sistema gerará a fatura automaticamente e receberá a mesma em dinheiro;</span></li>
+  <li class="rvps10"><span class="rvts21">Nova Fatura</span><span class="rvts6">: é necessário informar previamente um cliente. Uma nova fatura será criada, e aberta, conforme visto em </span><a class="rvts20" href="Recebimento.html">Recebimento</a><span class="rvts6">;</span></li>
+  <li class="rvps10"><span class="rvts21">Fatura Existente</span><span class="rvts6">: uma lista de faturas existentes, abertas, e do cliente do pedido. Selecione a fatura a qual deseja vincular e pressione </span><img width="64" height="22" alt="" style="padding : 1px;" src="lib/Botao%20Selecionar.png"><span class="rvts6">. O pedido será vinculado à fatura escolhida e aberta conforme </span><a class="rvts20" href="Recebimento.html">Recebimento</a><span class="rvts6">.</span></li>
  </ul>
 </ul>
-<p class="rvps13"><img width="320" height="210" alt="" style="padding : 1px;" src="lib/Tela%20Selecionar%20Fatura%20para%20o%20Pedido.png"></p>
-<p class="rvps9"><span class="rvts18"><br/></span></p>
-<p class="rvps13"><span class="rvts18"></span><span class="rvts6"></span></p>
-<p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour">Easily create CHM Help documents</a></p>
+<p class="rvps15"><img width="320" height="210" alt="" style="padding : 1px;" src="lib/Tela%20Selecionar%20Fatura%20para%20o%20Pedido.png"></p>
+<p class="rvps10"><span class="rvts18"><br/></span></p>
+<p class="rvps10"><span class="rvts18"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Ao Faturar um Pedido, o mesmo é salvo, e não poderá mais alterar cliente, natureza, data, e itens. Uma nova guia é aberta a qual será possível visualizar a fatura. Ao pressionar </span><img width="28" height="28" alt="" style="padding : 1px;" src="lib/Botao%20Abrir%20Fatura.png"><span class="rvts18"> a fatura é aberta e pode ser editada.</span></p>
+<p class="rvps3"><img width="358" height="264" alt="" style="padding : 1px;" src="lib/Tela%20Pedido%20para%20Emissao.png"></p>
+<p class="rvps15"><span class="rvts18"></span><span class="rvts6"></span></p>
+<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour">Easily create CHM Help documents</a></p>
 
             </div>
             
