--- a/SisMaper/Help/HTML/RequisitosdoSistema.html
+++ b/SisMaper/Help/HTML/RequisitosdoSistema.html
@@ -185,15 +185,15 @@
 
             <div class="main-content">
                 
-<p class="rvps5"><span class="rvts18">Para a utilização do Software SisMaper é necessário um sistema contendo os seguintes requisitos:</span></p>
+<p class="rvps11"><span class="rvts18">Para a instalação e utilização do Software SisMaper é necessário um dispositivo (Notebook/Desktop/Tablet) contendo os seguintes requisitos:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: disc;">
- <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Windows 11/10/8.1/8/7</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">512MB de RAM</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">400MB de espaço livre em disco</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Resolução de 1024x768 ou maior</span></li>
- <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><span class="rvts18">Conexão com a Internet</span><span class="rvts6"></span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps20"><span class="rvts18">Windows 11/10/8.1/8/7</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps20"><span class="rvts18">512MB de RAM</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps20"><span class="rvts18">400MB de espaço livre em disco</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps20"><span class="rvts18">Resolução de 1024x768 ou maior</span></li>
+ <li style="margin-left: 0px; text-indent: 0px" class="rvps20"><span class="rvts18">Conexão com a Internet</span><span class="rvts6"></span></li>
 </ul>
-<p class="rvps4" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Generate Kindle eBooks with ease</a></p>
+<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Generate Kindle eBooks with ease</a></p>
 
             </div>
             
