Fix GerarParcelas and add Recebimento Help

--- a/SisMaper/Help/HTML/Clientes.html
+++ b/SisMaper/Help/HTML/Clientes.html
@@ -174,7 +174,7 @@
                         <li><a href="Cadastros.html">Cadastros</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="CategoriaseUnidades.html" title="Categorias e Unidades" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="ClientesValidacaoDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="CategoriaseUnidades.html" title="Categorias e Unidades" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="ValidacaodeDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,6 +185,8 @@
 
             <div class="main-content">
                 
+<p class="rvps8"><img width="828" height="405" alt="" style="padding : 1px;" src="lib/NewItem38.png"></p>
+<p class="rvps7"><span class="rvts18"><br/></span></p>
 <p class="rvps7"><span class="rvts18">O menu cadastro de clientes permite visualizar todos os clientes registrados. Além de permitir o usuário criar, editar ou excluir um cliente, e também aplicar filtros. Esse menu só pode ser acessado como um usuário com permissões de administrador.</span></p>
 <p class="rvps7"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
