--- a/SisMaper/Help/HTML/Usuarios.html
+++ b/SisMaper/Help/HTML/Usuarios.html
@@ -174,7 +174,7 @@
                         <li><a href="Cadastros.html">Cadastros</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ClientesValidacaoDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Permissoes.html" title="Permiss&otilde;es" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group" role="group"><a class="btn btn-default" href="Cadastros.html" title="Cadastros" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ValidacaodeDados.html" title="Valida&ccedil;&atilde;o de Dados" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Permissoes.html" title="Permiss&otilde;es" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -185,13 +185,15 @@
 
             <div class="main-content">
                 
+<p class="rvps8"><img width="822" height="401" alt="" style="padding : 1px;" src="lib/NewItem41.png"></p>
+<p class="rvps7"><span class="rvts18"><br/></span></p>
 <p class="rvps7"><span class="rvts18">O menu cadastro de usuários permite visualizar todos os usuários registrados. Além de permitir o usuário criar ou editar um usuário, e também aplicar filtros. Esse menu só pode ser acessado como um usuário com permissões de administrador.</span></p>
 <p class="rvps7"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
  <li class="rvps7"><a name="AdicionarEditarUsuarios"></a><span class="rvts17">Adicionar ou Editar Usuários.</span></li>
 </ul>
 <p class="rvps7"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts18">Na tela de listagem de produtos, é possível adicionar, editar ou excluir produtos.</span></p>
-<p class="rvps7"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><img width="163" height="97" alt="" style="padding : 1px;" src="lib/NewItem33.png"></p>
+<p class="rvps7"><span class="rvts17"> &nbsp; &nbsp; &nbsp; &nbsp;</span><img width="221" height="132" alt="" style="padding : 1px;" src="lib/NewItem33.png"></p>
 <p class="rvps7"><span class="rvts18"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
  <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;">
@@ -209,7 +211,7 @@
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
  <li style="margin-left: 0px; text-indent: 0px" class="rvps19"><a name="FiltroUsuarios"></a><span class="rvts17">Filtro</span></li>
 </ul>
-<p class="rvps18"><img width="191" height="77" alt="" style="padding : 1px;" src="lib/NewItem34.png"></p>
+<p class="rvps18"><img width="254" height="102" alt="" style="padding : 1px;" src="lib/NewItem34.png"></p>
 <p class="rvps19"><span class="rvts18"><br/></span></p>
 <p class="rvps18"><span class="rvts18">O filtro de usuários permite que o usuário liste apenas os usuários cujo nome contenha o que foi digitado na caixa de texto.</span><span class="rvts6"></span></p>
 <p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Free iPhone documentation generator</a></p>
