--- a/SisMaper/Help/HTML/context/18.html
+++ b/SisMaper/Help/HTML/context/18.html
@@ -4,10 +4,10 @@
 
 <head>
     <title>Redirecting to "Valida&ccedil;&atilde;o de Dados"</title>
-    <link rel="canonical" href="../ClientesValidacaoDados.html" />
+    <link rel="canonical" href="../ValidacaodeDados.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../ClientesValidacaoDados.html" />
+    <meta http-equiv="refresh" content="0; url=../ValidacaodeDados.html" />
 </head>
 
 </html>
