--- a/SisMaper/Help/HTML/InformacoesdeContato.html
+++ b/SisMaper/Help/HTML/InformacoesdeContato.html
@@ -185,7 +185,8 @@
 
             <div class="main-content">
                 
-<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/create-epub-ebooks">Full-featured EPub generator</a></p>
+<p class="rvps2"><span class="rvts6">Link do projeto: </span><a class="rvts25" href="https://github.com/tarcisiomazur/SisMaper" target="_blank">https://github.com/tarcisiomazur/SisMaper</a><span class="rvts6"></span></p>
+<p class="rvps6" style="clear: both;"><span class="rvts13">Created with the Personal Edition of HelpNDoc: </span><a class="rvts14" href="https://www.helpndoc.com/create-epub-ebooks">Full-featured EPub generator</a></p>
 
             </div>
             
