--- a/SisMaper/Help/HTML/Instalacao.html
+++ b/SisMaper/Help/HTML/Instalacao.html
@@ -185,7 +185,26 @@
 
             <div class="main-content">
                 
-<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Easily create iPhone documentation</a></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Para realizar a instalação do sistema SisMaper execute o arquivo SisMaper-installer-1.0.0.0.exe disponibilizado para download.</span></p>
+<p class="rvps7"><img width="168" height="28" alt="" style="padding : 1px;" src="lib/NewItem69.png"></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Siga os passos de instalação e informe as informações do servidor. Caso não possua ainda um servidor MySQL, o mesmo poderá ser instalado nas próximas janelas.</span></p>
+<p class="rvps8"><img width="359" height="283" alt="" style="padding : 1px;" src="lib/NewItem70.png"></p>
+<p class="rvps7"><span class="rvts15"><br/></span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Caso não deseje instalar o MySQL Server 8.0, no computador local e deseje utilizar um servidor em LAN, desmarque a opção.</span></p>
+<p class="rvps8"><img width="354" height="280" alt="" style="padding : 1px;" src="lib/NewItem71.png"></p>
+<p class="rvps8"><span class="rvts15"><br/></span></p>
+<p class="rvps9"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Ao optar por instalar/modificar o MySQL Server, será dada uma opção para criar o banco de dados escolhido na tela anterior.</span></p>
+<p class="rvps8"><img width="347" height="272" alt="" style="padding : 1px;" src="lib/NewItem72.png"></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Caso seja selecionada a opção sim, durante a primeira inicialização do software SisMaper o banco de dados será recriado, ou seja, caso já exista um banco com o </span><span class="rvts16">schema</span><span class="rvts15"> definido anteriormente, todos os dados serão apagados.</span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Conceda as permissões necessárias, e por fim, o sistema estará disponível para utilização.</span></p>
+<p class="rvps8"><img width="337" height="266" alt="" style="padding : 1px;" src="lib/NewItem73.png"></p>
+<p class="rvps7"><span class="rvts15"><br/></span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span></p>
+<p class="rvps7"><span class="rvts15"><br/></span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts6"></span></p>
+<p class="rvps6" style="clear: both;"><span class="rvts13">Created with the Personal Edition of HelpNDoc: </span><a class="rvts14" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Easily create iPhone documentation</a></p>
 
             </div>
             
