--- a/SisMaper/Help/HTML/Login.html
+++ b/SisMaper/Help/HTML/Login.html
@@ -185,8 +185,10 @@
 
             <div class="main-content">
                 
-<p class="rvps2"><a class="rvts16" href="Login.html"></a><span class="rvts6"></span></p>
-<p class="rvps6" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/help-authoring-tool">Single source CHM, PDF, DOC and HTML Help creation</a></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts15">Para entrar no sistema SisMaper é necessário ter um Usuário e Senha pré-cadastrados. Os primeiros acessos ao sistema poderão ser realizados através do usuário "admin" e senha "admin", conforme a imagem abaixo:</span></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><img width="306" height="187" alt="" style="padding : 1px;" src="lib/NewItem67.png"></p>
+<p class="rvps7"><span class="rvts15"> &nbsp; &nbsp; &nbsp; &nbsp;</span><span class="rvts6"></span></p>
+<p class="rvps6" style="clear: both;"><span class="rvts13">Created with the Personal Edition of HelpNDoc: </span><a class="rvts14" href="https://www.helpndoc.com/help-authoring-tool">Single source CHM, PDF, DOC and HTML Help creation</a></p>
 
             </div>
             
